[gd_scene load_steps=36 format=3 uid="uid://bgjuqby6d1rn4"]

[ext_resource type="Script" path="res://scripts/editor/level_editor.gd" id="1_f2vqo"]
[ext_resource type="Script" path="res://scripts/editor/level_editor_camera.gd" id="2_a1c03"]
[ext_resource type="PackedScene" uid="uid://dd4kgsl8xo6gi" path="res://scenes/camera_room_tool.tscn" id="2_gum10"]
[ext_resource type="PackedScene" uid="uid://dibi351iqieuk" path="res://scenes/tile_map.tscn" id="3_y01m3"]
[ext_resource type="Texture2D" uid="uid://df51npckwo2wt" path="res://sprites/level_editor_icons/grid_bg.png" id="4_u6s76"]
[ext_resource type="Texture2D" uid="uid://d243if60go3yc" path="res://sprites/level_editor_icons/level_editor_atlas.png" id="5_56hnm"]
[ext_resource type="Script" path="res://scripts/level_editor/tool_button.gd" id="6_mg418"]
[ext_resource type="Texture2D" uid="uid://cr4rjlithoxxv" path="res://sprites/level_editor_icons/play.png" id="7_beg5p"]
[ext_resource type="Theme" uid="uid://bc6wyrum3duwh" path="res://themes/editor_tools.tres" id="9_5lcqo"]
[ext_resource type="Texture2D" uid="uid://beygbsbrc776m" path="res://sprites/level_editor_icons/home.png" id="10_dpill"]
[ext_resource type="Texture2D" uid="uid://bgty7fw6d5dlk" path="res://sprites/level_editor_icons/le_atlas.atlastex" id="12_05v2x"]
[ext_resource type="Texture2D" uid="uid://dag04y6cpg6lf" path="res://sprites/level_editor_icons/save.png" id="20_esaba"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_plt8p"]
load_path = "res://.godot/imported/level_editor_atlas.png-b95c532db98e67af2a2b15e9144c22fe.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_f7ra6"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(16, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmfxb"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(24, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_id2b8"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(32, 0, 8, 8)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8xwce"]
load_path = "res://.godot/imported/level_editor_atlas.png-b95c532db98e67af2a2b15e9144c22fe.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6lqu0"]
atlas = SubResource("CompressedTexture2D_8xwce")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xe661"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(8, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1krn"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(16, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxsj2"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(24, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjwc"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(32, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm7m8"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(40, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_063vg"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(48, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8iqj"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(0, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4xin"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(8, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_646h1"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(16, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_150ph"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(24, 16, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1wij"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(0, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4cll"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(8, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pyln"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(16, 24, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxhgi"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(0, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nju82"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(8, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf0st"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(16, 32, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jenl4"]
atlas = SubResource("CompressedTexture2D_plt8p")
region = Rect2(24, 32, 8, 8)

[node name="LevelEditor" type="Node2D"]
script = ExtResource("1_f2vqo")
camera_room_tool_scene = ExtResource("2_gum10")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 864)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_right = 257.0
offset_bottom = 145.0
texture = ExtResource("4_u6s76")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="TileMap" parent="." instance=ExtResource("3_y01m3")]

[node name="ToolPreview" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
texture = ExtResource("5_56hnm")
hframes = 16
vframes = 8

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(128, 72)
limit_left = -8192
limit_top = -4608
limit_right = 8192
limit_bottom = 4608
script = ExtResource("2_a1c03")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Error" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ErrorBG" type="ColorRect" parent="CanvasLayer/Error"]
layout_mode = 0
offset_left = 48.0
offset_top = 135.0
offset_right = 208.0
offset_bottom = 143.0
color = Color(0, 0, 0, 1)

[node name="ErrorMsg" type="Label" parent="CanvasLayer/Error"]
layout_mode = 0
offset_left = 48.0
offset_top = 135.0
offset_right = 208.0
offset_bottom = 143.0
theme = ExtResource("9_5lcqo")
text = "Cannot run level: missing player"
horizontal_alignment = 1

[node name="Interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_top = 132.0
offset_right = 24.0
offset_bottom = 144.0
theme = ExtResource("9_5lcqo")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Interface"]
layout_mode = 0
offset_right = 36.0
offset_bottom = 12.0
theme_override_constants/separation = 0

[node name="Save" type="Button" parent="CanvasLayer/Interface/HBoxContainer"]
layout_mode = 2
icon = ExtResource("20_esaba")

[node name="Run" type="Button" parent="CanvasLayer/Interface/HBoxContainer"]
layout_mode = 2
icon = ExtResource("7_beg5p")

[node name="HBoxContainerRight" type="HBoxContainer" parent="CanvasLayer/Interface"]
layout_mode = 0
offset_left = 244.0
offset_right = 256.0
offset_bottom = 12.0
theme_override_constants/separation = 0

[node name="MainMenu" type="Button" parent="CanvasLayer/Interface/HBoxContainerRight"]
layout_mode = 2
icon = ExtResource("10_dpill")

[node name="ToolBar" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 20.0
theme = ExtResource("9_5lcqo")

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/ToolBar"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 20.0

[node name="Terrain" type="TabBar" parent="CanvasLayer/ToolBar/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ToolBar/TabContainer/Terrain"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Terrain1" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("12_05v2x")
icon_alignment = 1
script = ExtResource("6_mg418")
tile_coordinate_x = 1

[node name="SlopeLeft" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_f7ra6")
icon_alignment = 1
script = ExtResource("6_mg418")
tile_coordinate_x = 2

[node name="SlopeRight" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_xmfxb")
icon_alignment = 1
script = ExtResource("6_mg418")
tile_coordinate_x = 3

[node name="OneWay" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_id2b8")
icon_alignment = 1
script = ExtResource("6_mg418")
tile_coordinate_x = 4

[node name="Enemies" type="TabBar" parent="CanvasLayer/ToolBar/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ToolBar/TabContainer/Enemies"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Rat" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_6lqu0")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1

[node name="Crab" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_xe661")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 1

[node name="Bat" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_f1krn")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 2

[node name="SkeletonHand" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_fxsj2")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 3

[node name="Slug" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_agjwc")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 4

[node name="Turret" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_tm7m8")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 5

[node name="RolyPoly" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_063vg")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 1
tile_coordinate_x = 6

[node name="Hazards" type="TabBar" parent="CanvasLayer/ToolBar/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ToolBar/TabContainer/Hazards"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Spike" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_k8iqj")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 2

[node name="Stalactite" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_k4xin")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 2
tile_coordinate_x = 1

[node name="Lava" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_646h1")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 2
tile_coordinate_x = 2

[node name="Sludge" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_150ph")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 2
tile_coordinate_x = 3

[node name="Pickups" type="TabBar" parent="CanvasLayer/ToolBar/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ToolBar/TabContainer/Pickups"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Health" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_u1wij")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 3

[node name="Shield" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_o4cll")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 3
tile_coordinate_x = 1

[node name="Coin" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_1pyln")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 3
tile_coordinate_x = 2

[node name="Utilities" type="TabBar" parent="CanvasLayer/ToolBar/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/ToolBar/TabContainer/Utilities"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 12.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Player" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_vxhgi")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 4

[node name="CameraRoom" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_nju82")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 4
tile_coordinate_x = 1

[node name="Checkpoint" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_bf0st")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 4
tile_coordinate_x = 2

[node name="Flagpole" type="Button" parent="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer"]
layout_mode = 2
icon = SubResource("AtlasTexture_jenl4")
icon_alignment = 1
script = ExtResource("6_mg418")
tool_type = 4
tile_coordinate_x = 3

[connection signal="pressed" from="CanvasLayer/Interface/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/HBoxContainer/Run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/HBoxContainerRight/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/Terrain1" to="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/Terrain1" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/Terrain1" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeLeft" to="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeLeft" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeLeft" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeRight" to="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeRight" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/SlopeRight" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/OneWay" to="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/OneWay" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Terrain/ScrollContainer/HBoxContainer/OneWay" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Rat" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Rat" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Rat" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Crab" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Crab" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Crab" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Bat" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Bat" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Bat" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/SkeletonHand" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/SkeletonHand" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/SkeletonHand" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Slug" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Slug" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Slug" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Turret" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Turret" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/Turret" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/RolyPoly" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/RolyPoly" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/RolyPoly" to="." method="_on_tool_selected"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/RolyPoly" to="CanvasLayer/ToolBar/TabContainer/Enemies/ScrollContainer/HBoxContainer/RolyPoly" method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Spike" to="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Spike" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Spike" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Stalactite" to="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Stalactite" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Stalactite" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Lava" to="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Lava" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Lava" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Sludge" to="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Sludge" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Hazards/ScrollContainer/HBoxContainer/Sludge" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Health" to="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Health" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Health" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Shield" to="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Shield" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Shield" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Coin" to="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Coin" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Pickups/ScrollContainer/HBoxContainer/Coin" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Player" to="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Player" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Player" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/CameraRoom" to="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/CameraRoom" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/CameraRoom" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Checkpoint" to="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Checkpoint" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Checkpoint" to="." method="_on_tool_selected"]
[connection signal="pressed" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Flagpole" to="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Flagpole" method="_on_pressed"]
[connection signal="tool_selected" from="CanvasLayer/ToolBar/TabContainer/Utilities/ScrollContainer/HBoxContainer/Flagpole" to="." method="_on_tool_selected"]
